--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -1,33 +1,33 @@
 {
   "game_create": "Успішно створено",
-  "create_error": "Ви вже створили гру, спочатку відмініть ту або дочекайтесь автовідміни!",
+  "create_error": "Ви вже створили гру, спочатку скасуйте її або дочекайтесь автоскасування!",
   "create_button_join": "Приєднатися",
   "create_button_start": "Почати",
-  "create_button_cancel": "Відмінити",
+  "create_button_cancel": "Скасувати",
   "create_button_leave": "Покинути",
   "create_button_new": "Створити нову гру",
-  "create_autocancel": "Дата автовідміни",
+  "create_autocancel": "Дата автоскасування",
   "create_game_owner": "Власник гри",
   "create_player_list": "Список гравців",
-  "cancel_content_message": "Гра була відмінена організатором!",
-  "cancel_confirm_message": "Гра була прибрана!",
-  "auto_cancel_content_message": "Гра була автоматично відмінена!",
+  "cancel_content_message": "Гру скасовано організатором!",
+  "cancel_confirm_message": "Гру скасовано!",
+  "auto_cancel_content_message": "Гру було автоматично скасовано!",
   "error_you_are_not_the_owner": "Ви не власник гри!",
-  "error_incorrect_game_id": "Не правильний айді гри!",
-  "game_was_ended": "Гра була завершена організатором!",
-  "game_deleted": "Гра видалена!",
+  "error_incorrect_game_id": "Неправильний ID гри!",
+  "game_was_ended": "Гру завершено організатором!",
+  "game_deleted": "Гру видалено!",
   "error_you_are_already": "Ви вже в грі!",
-  "join_game": "Ви успішно доєдналися!",
+  "join_game": "Ви успішно приєдналися!",
   "error_you_are_not_already": "Ви вже не в грі!",
-  "leave_game": "Ви покинули гру!",
-  "error_not_enough_players": "Недостатньо гравців для старта гри!",
+  "leave_game": "Ви залишили гру!",
+  "error_not_enough_players": "Недостатньо гравців для початку гри!",
   "pre_end_game": "Завершити гру",
-  "game_created": "Гра була почата!",
+  "game_created": "Гру почато!",
   "innocent": "мирний",
   "mafia": "мафія",
   "doctor": "лікар",
   "police": "поліцейський",
-  "killer": "манн'як",
+  "killer": "маніяк",
   "mistress": "повія",
   "start_your_role": "Ваша роль",
   "start_game_info": "Інформація:",
@@ -36,11 +36,11 @@
   "start_mafia_count": "Кількість мафій",
   "start_doctor_count": "Лікар",
   "start_police_count": "Поліцейський",
-  "start_killer_count": "Манн'як",
-  "start_role_innocent": "Ваша ціль не померти!",
-  "start_role_mafia": "Вбийте кожну кацапську сволоту! \n Ваші козаки:",
-  "start_role_doctor": "Врятуйте населення січі від смерті!",
+  "start_killer_count": "Маніяк",
+  "start_role_innocent": "Ваша мета — не померти!",
+  "start_role_mafia": "Убийте кожну кацапську сволоту! \n Ваші козаки:",
+  "start_role_doctor": "Урятуйте населення Січі від смерті!",
   "start_role_police": "Знайдіть бандитів та звинуватьте їх!",
-  "start_role_killer": "Ви Олексій Мільчаков, встановіть усський мир.",
+  "start_role_killer": "Ви Олексій Мільчаков, установіть усський мир.",
   "start_role_mistress": "string"
 }
