--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -62,8 +62,11 @@
   "role_embed_delay_name": "Delay between actions",
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Choose your victim...",
-  "role_mafia_description": "%KILL AND SURVIVE! ☠\nYou win if the mafia is at least half of all players. Exception: if there are two players left — the mafia and the maniac — the maniac wins.\nYour teammates: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%KILL AND SURVIVE! ☠\nYou win if the mafia is at least half of all active players. Exception: if there are two players left — the mafia and the maniac — the maniac wins.\nYour teammates: % + %{oPlayersTRole}%",
   "role_killer_name": "Maniac",
   "role_killer_placeHolder": "Choose your victim...",
-  "role_killer_description": "%KILL EVERYONE AND SURVIVE! \uD83E\uDE93\nYou win if no more than one player besides you is alive. Spare nobody!"
+  "role_killer_description": "%KILL EVERYONE AND SURVIVE! \uD83E\uDE93\nYou win if no more than one player besides you remains in the city. Spare nobody!%",
+  "role_peaceful_name": "Innocent",
+  "role_peaceful_placeHolder": "A",
+  "role_peaceful_description": "%Your goal is to survive and protect the city from criminals!\nYou win if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they will take over the city and you will lose!%"
 }
