--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -62,8 +62,8 @@
   "role_embed_delay_name": "Задержка между действиями",
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! ☠\nВы выигрываете, если мафия составляет не менее половины всех живых игроков. Исключение: если осталось двое игроков — мафия и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! ☠\nВы выигрываете, если мафия составляет не менее половины всех активных игроков. Исключение: если осталось двое игроков — мафия и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
   "role_killer_name": "Маньяк",
   "role_killer_placeHolder": "Выберите жертву...",
-  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! \uD83E\uDE93\nВы выигрываете, если кроме вас остаётся в живых не более одного игрока. Не щадите никого!"
+  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! \uD83E\uDE93\nВы выигрываете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%"
 }
