--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -62,8 +62,16 @@
   "role_embed_delay_name": "Задержка между действиями",
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! ☠\nВы выигрываете, если мафия составляет не менее половины всех активных игроков. Исключение: если осталось двое игроков — мафия и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! ☠\nКаждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\nМафия побеждает, если составляет не менее половины всех активных игроков. Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
   "role_killer_name": "Маньяк",
   "role_killer_placeHolder": "Выберите жертву...",
-  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! \uD83E\uDE93\nВы выигрываете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%"
+  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! \uD83E\uDE93\nРаз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\nВы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
+  "role_peaceful_name": "Мирный",
+  "role_peaceful_description": "%Ваша цель — защитить город от преступников! \uD83D\uDD4A\nРаскройте личности злодеев и добейтесь их изгнания из города.\nМирные побеждают, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_doctor_name": "Доктор",
+  "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
+  "role_doctor_description": "%Вы спасаете жизни людей! ♥\nКаждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_police_name": "Детектив",
+  "role_police_placeHolder": "Выберите, кого хотите проверить...",
+  "role_police_description": "%Вы расследуете преступления в городе! \uD83D\uDD0D\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%"
 }
