--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -62,8 +62,16 @@
   "role_embed_delay_name": "Затримка між діями",
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! ☠\nВи виграєте, якщо мафія складає не менше половини всіх активних гравців. Виняток: якщо залишилося двоє гравців — мафія та маніяк — перемагає маніяк.\nЗ вами в команді: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! ☠\nЩоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\nМафія перемагає, якщо складає не менше половини всіх активних гравців. Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.\nЗ вами в команді: % + %{oPlayersTRole}%",
   "role_killer_name": "Маніяк",
   "role_killer_placeHolder": "Оберіть жертву...",
-  "role_killer_description": "%УБИЙТЕ ВСІХ ТА ВИЖИВІТЬ! \uD83E\uDE93\nВи виграєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%"
+  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ! \uD83E\uDE93\nРаз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\nВи перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
+  "role_peaceful_name": "Мирний",
+  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців! \uD83D\uDD4A\nРозкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\nМирні перемагають, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_doctor_name": "Доктор",
+  "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
+  "role_doctor_description": "%Ви рятуєте життя людей! ♥\nЩоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_police_name": "Детектив",
+  "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
+  "role_police_description": "%Ви розслідуєте злочини в місті! \uD83D\uDD0D\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%"
 }
