--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -1,14 +1,16 @@
 {
-  "game_create": "Гру створено",
+  "game_created": "Гру створено",
   "create_error": "Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
   "create_button_join": "Приєднатися",
   "create_button_start": "Почати",
   "create_button_cancel": "Скасувати",
   "create_button_leave": "Покинути",
   "create_button_new": "Створити нову гру",
-  "create_autocancel": "Автоскасування за",
-  "create_game_owner": "Власник гри",
-  "create_player_list": "Список гравців",
+  "game_created_autocancel": "Автоскасування",
+  "game_created_gameOwner": "Власник гри",
+  "game_created_playerList": "Список гравців",
+  "game_created_roles": "Ролі:",
+  "game_created_gameEndConditions": "Умови завершення гри:",
   "cancel_content_message": "Гру скасовано організатором!",
   "cancel_confirm_message": "Гру скасовано!",
   "auto_cancel_content_message": "Гру було автоматично скасовано!",
@@ -22,7 +24,7 @@
   "leave_game": "Ви залишили гру!",
   "error_not_enough_players": "Недостатньо гравців для початку гри!",
   "pre_end_game": "Завершити гру",
-  "game_created": "Гру почато!",
+  "game_started": "Гру почато!",
   "innocent": "мирний",
   "mafia": "мафія",
   "doctor": "лікар",
@@ -69,26 +71,26 @@
 
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! ☠\nЩоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\nМафія перемагає, якщо складає не менше половини всіх активних гравців. Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.\nЗ вами в команді: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! :skull_crossbones:\nЩоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\nМафія перемагає, якщо складає не менше половини всіх активних гравців. Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.\nЗ вами в команді: % + %{oPlayersTRole}%",
   "role_killer_name": "Маніяк",
   "role_killer_placeHolder": "Оберіть жертву...",
-  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ! \uD83E\uDE93\nРаз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\nВи перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
+  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ! :axe:\nРаз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\nВи перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
   "role_peaceful_name": "Мирний",
-  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців! \uD83D\uDD4A\nРозкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\nМирні перемагають, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців! :dove:\nРозкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\nМирні перемагають, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
-  "role_doctor_description": "%Ви рятуєте життя людей! ♥\nЩоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\nЩоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
-  "role_police_description": "%Ви розслідуєте злочини в місті! \uD83D\uDD0D\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_police_description": "%Ви розслідуєте злочини в місті! :mag:\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
 
 
-  "profile_title": "Ваш профіль \uD83D\uDC64",
+  "profile_title": "Ваш профіль :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Акаунт у «Мафії» з:",
   "profile_accountSince": "Акаунт з:",
-  "profile_totalGames": "\uD83C\uDFAE Усього ігор:",
-  "profile_totalWins": "\uD83C\uDFC6 Усього перемог:",
-  "profile_premium": "\uD83D\uDCB5 Premium:",
+  "profile_totalGames": ":video_game: Усього ігор:",
+  "profile_totalWins": ":trophy: Усього перемог:",
+  "profile_premium": ":dollar: Premium:",
   "profile_premium_purchased": "придбано",
   "profile_premium_notPurchased": "не придбано",
   "profile_button_premium": "Premium",
