--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,14 +1,16 @@
 {
-  "game_create": "Game Created",
+  "game_created": "Game Created",
   "create_error": "You have already created a game, please cancel it or wait for autocancel!",
   "create_button_join": "Join",
   "create_button_start": "Start",
   "create_button_cancel": "Cancel",
   "create_button_leave": "Leave",
   "create_button_new": "Create New Game",
-  "create_autocancel": "Autocancel in",
-  "create_game_owner": "Game Owner",
-  "create_player_list": "Player List",
+  "game_created_autocancel": "Autocancel",
+  "game_created_gameOwner": "Game Owner",
+  "game_created_playerList": "Player List",
+  "game_created_roles": "Roles:",
+  "game_created_gameEndConditions": "Game End Conditions:",
   "cancel_content_message": "The game was canceled by its author!",
   "cancel_confirm_message": "The game was removed!",
   "auto_cancel_content_message": "The game was automatically canceled!",
@@ -22,7 +24,7 @@
   "leave_game": "You have left the game!",
   "error_not_enough_players": "Not enough players to start the game!",
   "pre_end_game": "End game",
-  "game_created": "The game was started!",
+  "game_started": "The game was started!",
   "innocent": "innocent",
   "mafia": "mafia",
   "doctor": "doctor",
@@ -69,26 +71,26 @@
 
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Choose your victim...",
-  "role_mafia_description": "%KILL AND SURVIVE! ☠\nEvery night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\nThe mafia wins if it is at least half of all active players. Exception: if there are two players left — a mafia member and the maniac — the maniac wins.\nYour teammates: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%KILL AND SURVIVE! :skull_crossbones:\nEvery night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\nThe mafia wins if it is at least half of all active players. Exception: if there are two players left — a mafia member and the maniac — the maniac wins.\nYour teammates: % + %{oPlayersTRole}%",
   "role_killer_name": "Maniac",
   "role_killer_placeHolder": "Choose your victim...",
-  "role_killer_description": "%KILL EVERYONE AND SURVIVE! \uD83E\uDE93\nOnce every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\nYou win if no more than one player besides you remains in the city. Spare nobody!%",
+  "role_killer_description": "%KILL EVERYONE AND SURVIVE! :axe:\nOnce every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\nYou win if no more than one player besides you remains in the city. Spare nobody!%",
   "role_peaceful_name": "Innocent",
-  "role_peaceful_description": "%Your goal is to save the city from criminals! \uD83D\uDD4A\nReveal the identities of the villains and achieve their expulsion from the city.\nThe innocents win if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_peaceful_description": "%Your goal is to save the city from criminals! :dove:\nReveal the identities of the villains and achieve their expulsion from the city.\nThe innocents win if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_doctor_name": "Doctor",
   "role_doctor_placeHolder": "Choose who you want to heal...",
-  "role_doctor_description": "%You save people's lives! ♥\nEvery night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_doctor_description": "%You save people's lives! :heart:\nEvery night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_police_name": "Detective",
   "role_police_placeHolder": "Choose who you want to check...",
-  "role_police_description": "%You investigate crimes in the city! \uD83D\uDD0D\nEvery night you check one player and find out if he or she belongs to the mafia.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_police_description": "%You investigate crimes in the city! :mag:\nEvery night you check one player and find out if he or she belongs to the mafia.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
 
 
-  "profile_title": "Your profile \uD83D\uDC64",
+  "profile_title": "Your profile :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Mafia account since:",
   "profile_accountSince": "Account since:",
-  "profile_totalGames": "\uD83C\uDFAE Total Games:",
-  "profile_totalWins": "\uD83C\uDFC6 Total Wins:",
-  "profile_premium": "\uD83D\uDCB5 Premium:",
+  "profile_totalGames": ":video_game: Total Games:",
+  "profile_totalWins": ":trophy: Total Wins:",
+  "profile_premium": ":dollar: Premium:",
   "profile_premium_purchased": "purchased",
   "profile_premium_notPurchased": "not purchased",
   "profile_button_premium": "Premium",
