--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -1,14 +1,16 @@
 {
-  "game_create": "Игра создана",
+  "game_created": "Игра создана",
   "create_error": "Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
   "create_button_join": "Присоединиться",
   "create_button_start": "Старт",
   "create_button_cancel": "Отменить",
   "create_button_leave": "Покинуть",
   "create_button_new": "Создать новую игру",
-  "create_autocancel": "Автоотмена через",
-  "create_game_owner": "Владелец игры",
-  "create_player_list": "Список игроков",
+  "game_created_autocancel": "Автоотмена",
+  "game_created_gameOwner": "Владелец игры",
+  "game_created_playerList": "Список игроков",
+  "game_created_roles": "Роли:",
+  "game_created_gameEndConditions": "Условия окончания игры:",
   "cancel_content_message": "Игра была отменена организатором!",
   "cancel_confirm_message": "Игра была убрана!",
   "auto_cancel_content_message": "Игра была автоматически отменена!",
@@ -22,7 +24,7 @@
   "leave_game": "Вы покинули игру!",
   "error_not_enough_players": "Недостаточно игроков для начала игры!",
   "pre_end_game": "Закончить игру",
-  "game_created": "Игра была запущена!",
+  "game_started": "Игра была запущена!",
   "innocent": "мирный",
   "mafia": "мафия",
   "doctor": "доктор",
@@ -69,26 +71,26 @@
 
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! ☠\nКаждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\nМафия побеждает, если составляет не менее половины всех активных игроков. Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! :skull_crossbones:\nКаждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\nМафия побеждает, если составляет не менее половины всех активных игроков. Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
   "role_killer_name": "Маньяк",
   "role_killer_placeHolder": "Выберите жертву...",
-  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! \uD83E\uDE93\nРаз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\nВы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
+  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! :axe:\nРаз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\nВы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
   "role_peaceful_name": "Мирный",
-  "role_peaceful_description": "%Ваша цель — защитить город от преступников! \uD83D\uDD4A\nРаскройте личности злодеев и добейтесь их изгнания из города.\nМирные побеждают, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_peaceful_description": "%Ваша цель — защитить город от преступников! :dove:\nРаскройте личности злодеев и добейтесь их изгнания из города.\nМирные побеждают, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
-  "role_doctor_description": "%Вы спасаете жизни людей! ♥\nКаждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\nКаждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Выберите, кого хотите проверить...",
-  "role_police_description": "%Вы расследуете преступления в городе! \uD83D\uDD0D\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_police_description": "%Вы расследуете преступления в городе! :mag:\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
 
 
-  "profile_title": "Ваш профиль \uD83D\uDC64",
+  "profile_title": "Ваш профиль :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Аккаунт в «Мафии» с:",
   "profile_accountSince": "Аккаунт с:",
-  "profile_totalGames": "\uD83C\uDFAE Всего игр:",
-  "profile_totalWins": "\uD83C\uDFC6 Всего побед:",
-  "profile_premium": "\uD83D\uDCB5 Premium:",
+  "profile_totalGames": ":video_game: Всего игр:",
+  "profile_totalWins": ":trophy: Всего побед:",
+  "profile_premium": ":dollar: Premium:",
   "profile_premium_purchased": "приобретён",
   "profile_premium_notPurchased": "не приобретён",
   "profile_button_premium": "Premium",
